Fix scroll & logo alignment in notebook

--- a/src/components/notebook/notebookPageElementsDetails/NotebookPageElementsDetails.module.less
+++ b/src/components/notebook/notebookPageElementsDetails/NotebookPageElementsDetails.module.less
@@ -27,6 +27,12 @@
   }
 }
 
+.elementHeaderSubContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .elementHeaderBg {
   background: @light-color;
   transform: translate(-5%, 2px) rotate(-1deg);
